test/langtools/tools/javac/InterfaceInInner.out
InterfaceInInner.java:12:13: compiler.err.static.declaration.not.allowed.in.inner.classes
1 error
